--- a/src/styles.css
+++ b/src/styles.css
@@ -100,7 +100,20 @@ p {
 }
 
 .aToZBox {
-    height: 1047px;
+    height: 300px ;
     background-color: rgba(98, 37, 54, 0.03);
     margin-top: 120px;
+}
+
+.card-padding {
+    margin: 10px;
+    padding-bottom: 100px;
+}
+
+.col-sm {
+    padding-top: 50px;
+}
+
+.card-text {
+    padding-left: 0px;
 }
