--- a/src/styles.css
+++ b/src/styles.css
@@ -99,11 +99,11 @@ p {
     margin-top: 140px;
 }
 
-.aToZBox {
+/* .aToZBox {
     height: 300px ;
     background-color: rgba(98, 37, 54, 0.03);
     margin-top: 120px;
-}
+} */
 
 .card-padding {
     margin: 10px;
